# tauri-custom-protocol

./: .gitignore  Cargo.toml  README.md  build.ts  index.html
.devcontainer/: Dockerfile  devcontainer.json
src/: App.tsx  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mybinary_macro/: Cargo.toml
src-tauri/mybinary_macro/implement/: Cargo.toml
src-tauri/mybinary_macro/implement/src/: lib.rs
src-tauri/mybinary_macro/src/: lib.rs
src-tauri/src/: demuxer.rs  main.rs  protocol.rs  veclist.rs
