[package]
name = "tauri-yew-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { workspace = true }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
bincode = { workspace = true }

[workspace]
members = [
    "src-tauri",
    "src-tauri/mybinary_macro",
    "src-tauri/mybinary_macro/implement",
]

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
